--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "express": "4.18.1",
+    "express": "^4.21.1",
     "lightningcss": "^1.19.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
