--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "chalk": "5.0.1",
     "cors": "2.8.5",
-    "express": "4.18.1",
+    "express": "^4.21.1",
     "morgan": "1.10.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.19"
+    "nodemon": "^3.1.7"
   }
 }
